recursion.lessons.recursion.tree.Tree.scala.error
Tree:15: error: ';' expected but '(' found.
		setCap(cap);
                      ^